FIxed link button on mobile

--- a/my-site/src/App.css
+++ b/my-site/src/App.css
@@ -22,10 +22,6 @@
     padding: 0;
     width: 85% !important;
   }
-
-  .button {
-    padding: 5% 15% !important;
-  }
 }
 
 .App {
